# hyperer

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml  ruff_check_raiser.py  test_blackbox.py  test_link_matches.py
.github/workflows/: ci.yml
hyperer/: __init__.py  cargo.py  hcargo.py  hrg.py  rg.py  ruff.py
litterbox/: hcargo.py  hrg.py
test_rust_projects/compile_fails/: Cargo.toml
test_rust_projects/compile_fails/src/: main.rs
