[tool.poetry]
name = "hyperer"
version = "0.1.0"
description = ""
authors = ["Charlie Groves <c@sevorg.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hyperer-cargo = 'hyperer.cargo:main'
hyperer-rg = 'hyperer.rg:main'

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
