[tool.poetry]
name = "hyperer"
version = "0.2.1"
description = "Injects hyperlinks into terminal commands"
authors = ["Charlie Groves <c@sevorg.org>"]
readme = "README.md"
repository = "https://github.com/groves/hyperer"


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hyperer-cargo = 'hyperer.cargo:main'
hyperer-rg = 'hyperer.rg:main'

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
