[tool.poetry]
name = "hyperer"
version = "0.3.0"
description = "Injects hyperlinks into terminal commands"
authors = ["Charlie Groves <c@sevorg.org>"]
readme = "README.md"
repository = "https://github.com/groves/hyperer"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hyperer-cargo = 'hyperer.cargo:main'
hyperer-rg = 'hyperer.rg:main'
hyperer-ruff = 'hyperer.ruff:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ruff = "^0.1.5"

[tool.ruff]
exclude = ['ruff_check_raiser.py']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
